add for loop to replace ping, pong, pingpong into array, clear output after each submit/before displaying next output

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <link href="css/bootstrap.css" rel="stylesheet" type="text/css">
     <link href="css/styles.css" rel="stylesheet" type="text/css">
-    <link href="fonts/Raleway-Light.ttf" href="fonts/Raleway-Medium.ttf" href="fonts/Raleway-SemiBold.ttf" rel="stylesheet">
+    <link href="fonts/Raleway-Light.ttf" href="fonts/Raleway-SemiBold.ttf" rel="stylesheet">
     <script src="js/jquery-3.3.1.js"></script>
     <script src="js/scripts.js"></script>
     <title>Ping-Pong</title>
@@ -37,9 +37,9 @@
       <div id="main-content4">
         <p id="output"></p>
       </div>
-      <div id="icon">
+      <!-- <div id="icon">
         <p>Esc</p>
-      </div>
+      </div> -->
     </div>
   </body>
 </html>
