add oxford comma

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         <p>Epicodus, Intro to Programming, PDX: Code Review #3.</p>
       </div>
       <div class="cell" id ="main-content2">
-        <p>This webpage will display a list of numbers starting with a user input number and count up to a user specified final number, replacing every third number with "ping", every fifth number with "pong" and every fifteenth number with "ping-pong".</p>
+        <p>This webpage will display a list of numbers starting with a user input number and count up to a user specified final number, replacing every third number with "ping", every fifth number with "pong", and every fifteenth number with "ping-pong".</p>
       </div>
       <div class="cell" id="left-content3">
       </div>
